# Geomapping_ros2

./: .gitignore  .gitmodules  AGENTS.md  README.md
agent_memory/: bugs.md  context.md  progress.md
docs/: hfdm150_four_way_experiment_summary.md  hfdm_network_structure.html  mppi_fdm_constraints.html
src/MEDIRL/: CMakeLists.txt  package.xml  setup.py
src/MEDIRL/launch/: medirl.launch  medirl.launch.py
src/MEDIRL/medirl/: MEDIRL.py  MEDIRLCWL.py  __init__.py  env_dilated.py
src/MEDIRL/scripts/: MEDIRL.py  env_dilated.py  test_pub.py  test_sem.py
src/ausim_geomapping_adapter/: package.xml  setup.cfg  setup.py
src/ausim_geomapping_adapter/ausim_geomapping_adapter/: __init__.py  pipeline.py
src/ausim_geomapping_adapter/launch/: ausim_scout_localmap.launch.py  ausim_scout_mppi_frontend.launch.py  ausim_scout_mppi_hfdm_no_frontend.launch.py  ausim_scout_mppi_no_frontend.launch.py  ausim_scout_mppi_topdown_heightmap.launch.py
src/ausim_geomapping_adapter/test/: test_pipeline_topdown.py
src/elevation_msgs/: CMakeLists.txt  package.xml
src/elevation_msgs/msg/: OccupancyElevation.msg
src/mppi_controller/: CMakeLists.txt  package.xml  setup.py
src/mppi_controller/configs/: mujoco_external_path_base.yaml  mujoco_rviz_goal.yaml  mujoco_rviz_goal_hfdm_h25.yaml  mujoco_rviz_goal_no_frontend.yaml  obstacle_scout_sparse.yaml
src/mppi_controller/launch/: mppi_closed_loop.launch.py
src/mppi_controller/mppi_controller/: __init__.py  cli.py  config.py  experiment.py  fdm_mppi_sim_node.py  mujoco_closed_loop.py
src/mppi_controller/mppi_controller/controllers/: __init__.py  mppi_cbf.py  mppi_cbf_soft.py  mppi_omni_cuda.py  mppi_omni_high_level_fdm_torch.py  mppi_omni_learned_numpy.py  mppi_omni_learned_torch.py  mppi_omni_numpy.py  mppi_omni_sequence_fdm_torch.py  mppi_omni_sequence_fdm_v2_torch.py  mppi_omni_torch.py
src/mppi_controller/mppi_controller/core/: __init__.py  high_level_fdm_runtime.py  jackal.py  learned_residual_dynamics.py  obstacle.py  omni_b2.py  residual_fdm_model.py  residual_world.py  sequence_fdm_dynamics.py  sequence_fdm_model.py  sequence_fdm_rollout.py  sequence_fdm_v2.py  terrain.py  terrain_grid.py
src/mppi_controller/mppi_controller/data/: __init__.py  collect_oracle_episode.py  generate_oracle_episodes.py  oracle_dataset.py  oracle_dataset_validator.py  oracle_episode.py  sequence_fdm_collector.py
src/mppi_controller/mppi_controller/evaluation/: __init__.py  benchmark.py  residual_fdm_dataset.py  residual_fdm_rollout.py
src/mppi_controller/mppi_controller/reporting/: __init__.py  pipeline_report.py
src/mppi_controller/mppi_controller/simulation/: __init__.py  omni_runner.py  random_obstacles.py  random_scenario.py  random_terrain.py  result_io.py  results_path.py  run_omni_mppi.py  runner.py
src/mppi_controller/mppi_controller/training/: __init__.py  residual_fdm.py  sequence_fdm.py  sequence_fdm_v2.py
src/mppi_controller/mppi_controller/visualization/: __init__.py  oracle_viewer.py  utils.py
src/mppi_controller/test/: test_cuda_mppi_defaults.py  test_dynamic_obstacles.py  test_external_path_goal.py  test_geomapping_dataset_collect.py  test_hfdm_sweep_diagnostics.py  test_high_level_fdm_controller.py  test_mppi_omni_cuda.py  test_mujoco_closed_loop_obstacles.py  test_mujoco_motion_policy.py  test_reactive_avoidance.py  test_sequence_fdm_costmap_input.py  test_sequence_fdm_only.py
src/mppi_controller/tools/: fdm_mppi  fdm_mppi.py
src/terrain_pub_node/: CMakeLists.txt  package.xml
src/terrain_pub_node/src/: terrain_pub_node.cpp
src/traversability_mapping/: CMakeLists.txt  package.xml
src/traversability_mapping/include/: utility.h
src/traversability_mapping/include/planner/: Dstar.h  cubic_spline_interpolator.h  kdtree.h  node.h  planningState.h  raycast.h  sampler.h
src/traversability_mapping/include/visualization/: visualization.hpp
src/traversability_mapping/launch/: ausim_cube_mppi.launch.py  lio_bag.launch.py
src/traversability_mapping/launch/include/: traversability_mapping.rviz
src/traversability_mapping/msg/: CloudInfo.msg  Polynome.msg
src/traversability_mapping/params/: traversability.yaml
src/traversability_mapping/src/: traversability_cost.cpp  traversability_filter.cpp  traversability_map.cpp  traversability_path.cpp
tools/: analyze_hfdm_sweep.py  geomapping_dataset_collect.py  geomapping_nav_trial.py  run_data1_100seeds.sh  run_data1_continue_90seeds.sh  run_hfdm_four_way_seed_sweep.py  run_hfdm_model_seed_sweep.py  run_hfdm_no_frontend_candidate_sweep.py  summarize_nav_trials.py  train_data1_seqfdm_v2.sh  train_hfdm_60h25_memsafe_rerun.sh  train_hfdm_data1_150_h25.sh  train_hfdm_data1_60_h25_30hz.sh
