<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ausim_geomapping_adapter</name>
  <version>0.0.0</version>
  <description>Launch-level adapter from ausim2 MuJoCo ROS outputs to the Geomapping local map pipeline.</description>
  <maintainer email="2579171559@qq.com">mexxiie</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>terrain_pub_node</exec_depend>
  <exec_depend>traversability_mapping</exec_depend>
  <exec_depend>medirl</exec_depend>
  <exec_depend>mppi_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
