<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traversability_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2579171559@qq.com">mexxiie</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>elevation_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>OpenMP</exec_depend>   

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
